[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/typhlosion/front.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/progress_bars/health_bar_over.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/progress_bars/health_bar_progress.png" type="Texture" id=3]
[ext_resource path="res://ui/elements/clamped_progress_bar.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/progress_bars/energy_bar_over.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/progress_bars/energy_bar_progress.png" type="Texture" id=6]
[ext_resource path="res://ui/battle/battle_creature.gd" type="Script" id=7]

[node name="BattleCreature" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32, 8 )
texture = ExtResource( 1 )
centered = false
hframes = 22

[node name="HealthBar" type="TextureProgress" parent="."]
margin_top = 8.0
margin_right = 37.0
margin_bottom = 20.0
max_value = 37.0
value = 36.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
minimum = 10
maximum = 36

[node name="EnergyBar" type="TextureProgress" parent="."]
margin_left = 1.0
margin_top = 25.0
margin_right = 37.0
margin_bottom = 37.0
max_value = 36.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
minimum = 10
maximum = 36

[node name="Tween" type="Tween" parent="."]
